--- a/src/InterShareMobile/Pages/StartPage.xaml
+++ b/src/InterShareMobile/Pages/StartPage.xaml
@@ -33,7 +33,7 @@
                 <StackLayout effects:SafeAreaEffect.SafeArea="true, false, true, true">
                     <Label Opacity="0.6" FontAttributes="Bold" HorizontalTextAlignment="Center" Margin="0, 0, 0, 10">Send a file</Label>
 
-                    <Grid ColumnDefinitions="*, *, *">
+                    <Grid ColumnDefinitions="*, *" RowDefinitions="*, *">
                         <controls:CustomButton
                             Grid.Column="0"
                             Type="Filled"
@@ -49,11 +49,20 @@
                             Text="Photo" />
 
                         <controls:CustomButton
-                            Grid.Column="2"
+                            Grid.Column="0"
+                            Grid.Row="1"
                             Type="Filled"
                             Clicked="OnSendVideoClicked"
                             Image="video.png"
                             Text="Video" />
+
+                        <controls:CustomButton
+                            Grid.Column="1"
+                            Grid.Row="1"
+                            Type="Filled"
+                            Image="clipboard.png"
+                            Clicked="OnSendClipboardClicked"
+                            Text="Clipboard" />
                     </Grid>
 
                     <controls:CustomButton
